@@ -4,3 +4,9 @@ This Changelog documents breaking changes, typically plugin API or database chan
                     That is db_report(org, sync_db) became db_report(context, org, sync_db).
             REASON: This allows db reports access to the github_url context parameter, allowing them to work with private GitHub instances. 
             ACTION: Users should update any custom db-reporters to include the context parameter. 
+
+2017-05-28: CHANGE: Removed two-factor-authentication from the synchronized data. 
+                    This also removed the No2faDbReporter report.
+            REASON: GitHub allows organizations to require two-factor authentication. Rather than looking at reports,
+                    users should be enabling that feature. 
+            ACTION: Users should remove the No2faDbReporter report from their config files. 
